grammar.js
    program: ($) => optional($._statements),
    _statements: ($) =>
      choice(
        seq(
          repeat(
            choice(
              $._terminated_statement,
              '\n',
            ),
          ),
          $._statement,
        ),
        repeat1(
          choice(
            $._terminated_statement,
            '\n',
          ),
        ),
      ),
    _single_line_statement: ($) =>
      choice(
        $.variable_declaration,
        $.variable_assignment,
        $.expression_mode,
        $.command_call,
        $.function_definition,
        $.proc_definition,
        $.for_statement,
        $.while_statement,
        $.if_statement,
        $.case_statement,
        $.const_declaration,
      ),
    _expression: ($) =>
      choice(
        $.function_call,
        $._primary,
        $._postfix,
        $.unary_expression,
        $.binary_expression,
        $._paren_expression,
        $.expansion,
      ),
    variable_declaration: ($) =>
      prec.left(
        -10,
        seq(
          choice(
            seq("var", field("variable", $.variable_name)),
            seq("const", field("constant", $.variable_name)),
          ),
          "=",
          field("value", $._expression),
        ),
      ),
    variable_assignment: ($) =>
      seq(
        choice("setvar", "setglobal"),
        field("variable", $.variable_name),
        optional($._variable_access),
        choice("=", "+=", "-=", "*=", "/="),
        field("value", $._expression),
      ),
    command_call: ($) =>
      prec.left(seq(
        optional("!"),
        repeat($.environment),
        $.command_name,
        repeat(
          choice(
            $._literal,
            $.redirection,
            $.word,
          ),
        ),
        optional(seq($.parameter_list_call, repeat($.redirection))),
        optional(seq($.block, repeat($.redirection))),
        optional(prec.right(
          -2,
          seq(
            choice("|", "&&", "||"),
            $._single_line_statement,
          ),
        )),
      )),
    _variable_access: ($) =>
      seq(
        choice(
          seq(
            ".",
            field("member", $.variable_name),
          ),
          prec.left(seq(
            "[",
            field("key", $._expression),
            "]",
          )),
        ),
      ),
    function_call: ($) =>
      prec.left(seq(
        seq(
          field("call", $.function_name),
          "(",
          commaSep($._expression),
          optional(
            choice(
              seq(choice(",", ";"), commaSepWithTrailing($.named_parameter)),
              ",",
            ),
          ),
          ")",
        ),
      )),
    dict: ($) =>
      seq(
        "{",
        commaSepWithTrailing(
          seq(
            choice(
              field("key", $.variable_name),
              field("key", $.string),
              seq("[", field("key", $._expression), "]"),
            ),
            ":",
            $._expression,
          ),
        ),
        "}",
      ),
    list: ($) => seq("[", commaSepWithTrailing($._expression), "]"),
    literal_list: ($) => seq(":|", repeat(choice("\n", $.word)), "|"),
    _literal: ($) => choice($.number, $.boolean, $.string, $.expansion),
    string: ($) =>
      choice(
        $._double_quotes_string,
        $._single_quotes_string,
        $._raw_string,
        $._j8_string,
        $._byte_string,
      ),
    method_call: ($) =>
      seq(
        choice(".", "->"),
        field("method", $.function_name),
        "(",
        commaSepWithTrailing($._expression),
        ")",
      ),
    expansion: ($) =>
      choice(
        seq(
          alias($.dollar_expansion, "$"),
          choice($.variable_name, alias(/[0-9\*\?\#\@]/, $.variable_name)),
        ),
        seq(
          alias($.dollar_expansion, "$"),
          "{",
          choice($.variable_name, alias(/[0-9\*\?\#\@]/, $.variable_name)),
          optional(seq(":-", $._literal)),
          "}",
        ),
        seq(
          alias($.hat_expansion, "@"),
          $.variable_name,
        ),
        seq(
          choice(
            alias($.dollar_expansion, "$"),
            alias($.hat_expansion, "@"),
            "^",
          ),
          "[",
          $._expression,
          "]",
        ),
        seq(
          choice(
            alias($.dollar_expansion, "$"),
            alias($.hat_expansion, "@"),
            "^",
          ),
          "(",
          $.command_call,
          ")",
        ),
      ),
    binary_expression: ($) => {
      const table = [
        ["or", PREC.LOGICAL_OR],
        ["and", PREC.LOGICAL_AND],
        ["|", PREC.BITWISE_OR],
        ["^", PREC.BITWISE_XOR],
        ["&", PREC.BITWISE_AND],
        [choice(seq("is", optional("not")), "==", "!=", "!==", "===", "~=="), PREC.EQUALITY],
        [choice("==", "!=", "!==", "===", "~=="), PREC.EQUALITY],
        [choice("<", ">", "<=", ">=", "~", "!~", "~~", "!~~"), PREC.COMPARE],
        [choice("<<", ">>"), PREC.SHIFT],
        [choice("+", "-", "++"), PREC.ADD],
        [choice("*", "/", "%"), PREC.MULTIPLY],
        ["**", PREC.EXPONENT],
        ["=>", PREC.CHAIN],
      ];

      return choice(...table.map(([operator, precedence]) => {
        // @ts-ignore
        return prec.left(
          precedence,
          seq(
            field("left", $._expression),
            // @ts-ignore
            field("operator", operator),
            field("right", $._expression),
          ),
        );
      }));
    },
    _double_quotes_string: ($) =>
      seq(
        optional("$"),
        choice(
          seq(
            '"',
            repeat($._double_quotes_string_content),
            '"',
          ),
          seq(
            '"""',
            repeat(choice('"', $._double_quotes_string_content)),
            '"""',
          ),
        ),
      ),
    _j8_string: ($) =>
      choice(
        seq(
          "u'",
          repeat(choice(
            /[^\\']+/,
            $.escape_sequence,
          )),
          "'",
        ),
        seq(
          "u'''",
          repeat(choice(
            /[^\\']+/,
            $.escape_sequence,
            "'",
          )),
          "'''",
        ),
      ),
    _byte_string: ($) =>
      choice(
        seq(
          seq(choice("$", "b"), "'"),
          repeat(choice(
            /[^\\']+/,
            $.escape_sequence,
            $.escaped_bytes,
          )),
          "'",
        ),
        seq(
          seq(choice("$", "b"), "'''"),
          repeat(choice(
            /[^\\']+/,
            $.escape_sequence,
            $.escaped_bytes,
            "'",
          )),
          "'''",
        ),
      ),
    _single_quotes_string: (_) => choice(/'[^'\\]*'/, /'''[^\\]*'''/),
    _raw_string: (_) => choice(/r'[^']*'/, /r'''[^']*'''/),
    escaped_newline: (_) => "\\\n",
    function_name: ($) => $.variable_name,
    variable_name: (_) => token(/[_a-zA-Z]\w*/),
    // Do not use literal as a nubmer and a boolean should be parsed as words
    command_name: ($) => choice($.word, $.expansion, $.string),
    number: ($) =>
      choice(
        $._decimal,
        // Hex
        /0x[a-fA-F0-9]+(?:(?:_[a-fA-F0-9]+)*)?/,
        // Oct
        /0o[0-7]+(?:(?:_[0-7]+)*)?/,
        // Binary
        /0b[01]+(?:(?:_[01]+)*)?/,
      ),
    _decimal: (_) => /\d+(_\d+)*(\.\d+)?(_\d+)*/,
    comment: (_) => token(prec(-10, /#.*/)),
    word: (_) =>
      token(seq(
        choice(
          noneOf("#", "@", ...SPECIAL_CHARACTERS),
          seq("\\", noneOf("\\s")),
        ),
        repeat(choice(
          noneOf(...SPECIAL_CHARACTERS),
          seq("\\", noneOf("\\s")),
          "\\ ",
        )),
      )),
